--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3196585 */
-  src: url('/font/iconfont.woff2?t=1645493953722') format('woff2'),
-       url('/font/iconfont.woff?t=1645493953722') format('woff'),
-       url('/font/iconfont.ttf?t=1645493953722') format('truetype');
+  src: url('/uu-uui/font/iconfont.woff2?t=1645493953722') format('woff2'),
+       url('/uu-uui/font/iconfont.woff?t=1645493953722') format('woff'),
+       url('/uu-uui/font/iconfont.ttf?t=1645493953722') format('truetype');
 }
 
 [class*='uui-icon-'] {
